# verity-policy-coverage-eval-framework

./: .dockerignore  .env.example  .gitignore  .pip-audit-ignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTOR_ARCHITECTURE_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: adversarial.yml  docker-scan.yml  docs.yml  model-compare.yml  mutation.yml  pages.yml  pr-gate.yml  semantic-eval.yml
datasets/adversarial/: probes.yaml
datasets/calibration/: labeled.yaml
datasets/cassettes/authored/: ctrl-bronze-er-copay.yaml  ctrl-bronze-mri-prior-auth.yaml  ctrl-bronze-oop-cap-tool.yaml  ctrl-bronze-oop-exact-boundary.yaml  ctrl-bronze-preventive.yaml  ctrl-bronze-primary-care-first-three.yaml  ctrl-bronze-pt-session-limit.yaml  ctrl-dental-cleaning-exclusion.yaml  ctrl-dental-not-covered-without-rider.yaml  ctrl-dental-rider-cleaning.yaml  ctrl-dental-rider-major-services-wait.yaml  ctrl-effective-date-no-retro.yaml  ctrl-family-oop-max-bronze.yaml  ctrl-family-oop-max-gold.yaml  ctrl-fertility-rider-lifetime-max.yaml  ctrl-gold-deductible.yaml  ctrl-gold-family-deductible.yaml  ctrl-gold-lab-cost-tool.yaml  ctrl-gold-oop-amendment.yaml  ctrl-gold-pt-session-limit.yaml  ctrl-gold-specialty-drug-pa.yaml  ctrl-home-health-pa-limit.yaml  ctrl-home-health-visit-limit.yaml  ctrl-midyear-tier-change-deductible.yaml  ctrl-missing-acupuncture-policy.yaml  ctrl-missing-prior-auth-status.yaml  ctrl-missing-pt-visits-used.yaml  ctrl-network-tier-oon-cost.yaml  ctrl-not-refusal-doctor-visit-cost.yaml  ctrl-not-refusal-hospital-admission-cost.yaml  ctrl-orthodontia-rider-lifetime-max.yaml  ctrl-plan-year-reset.yaml  ctrl-required-docs-oon-claim.yaml  ctrl-rider-claim-documentation.yaml  ctrl-silver-awkward-decimal-cost-tool.yaml  ctrl-silver-deductible-exact-boundary.yaml  ctrl-silver-generic-rx.yaml  ctrl-silver-physical-therapy-limit.yaml  ctrl-silver-specialist-copay.yaml  ctrl-snf-annual-limit.yaml  (+20 more)
datasets/golden/: boundaries.yaml  cases.yaml  controls.yaml  defects.yaml  riders.yaml
datasets/retrieval/: benchmarks.yaml  recorded_chunks.json
docs/: architecture.md  calibration-report.md  calibration-review-workflow.md  capability-status.md  ci-policy.md  dataset-coverage.md  defects-caught.md  extending.md  future-work.md  known-issues.md  observability.md  owasp-llm-coverage.md  profile-comparison.md  retrieval-ablation.md  reviewer-guide.md  seeded-defects.md  thresholds.md
docs/adr/: 0001-glm-4-5-model-choice.md  0001-glm-5-2-model-choice.md  0002-three-layer-eval-pyramid.md  0003-cassette-replay-for-ci.md  0004-judge-calibration-and-self-bias.md  0005-statistical-thresholds.md  README.md
docs/evidence/: latest-verification.json  latest-verification.md  live-exceptions.json
docs/sample-report/: README.md  calibration.html  cost.html  dataset-coverage.html  index.html  security.html  trends.html  vulnerabilities.html
docs/samples/: sample-trace.jsonl
portfolio/: manifest.yml
promptfoo/: provider.py  redteam.yaml
reliability/: quarantine.yml
reports/: cost-summary.md
reports/defects/: defects-caught.json
reports/evidence/: cost-summary-2026-07-02.md
reports/security/: summary.json  summary.md
reports/semantic/: results.json
scripts/: author_adversarial_cassettes.py  build_report_site.py  check_live_evidence.py  check_module_coverage.py  check_vuln_exceptions.py  dataset_inventory.py  dataset_matrix.py  defects_report.py  detect_flaky_tests.py  model_comparison.py  profile_comparison.py  record_cassettes.py  retrieval_ablation.py  run_calibration.py  select_openrouter_free_models.py  trace_demo.py
src/sut/: agent.py  auth.py  citations.py  guardrails.py  retriever.py  review_triggers.py
src/verity/: adversarial.py  calibration.py  cassettes.py  check_result.py  checks.py  claim_grounding.py  config.py  conversation.py  cost.py  escalation.py  golden.py  injection_guard.py  judges.py  latency.py  pii.py  protocols.py  providers.py  reporting.py  response_schema.py  retrieval_eval.py  security_report.py  statistics.py  text_expectations.py  tool_args.py  tracing.py  trends.py
tests/: conftest.py
tests/adversarial/: conftest.py  test_redteam_hermetic.py
tests/deterministic/: conftest.py  retrieval_contract.py  test_chunking_contract.py  test_conversation_quality.py  test_defects_caught.py  test_guardrail_refusal.py  test_human_review_workflow.py  test_injection_guard.py  test_inmemory_retrieval_quality.py  test_pii_scan.py  test_policy_versioning.py  test_real_retrieval_quality.py  test_regression_cassette.py  test_response_schema.py  test_retrieval_benchmark.py  test_retriever_regression.py  test_tool_arg_schema.py
tests/live/: test_model_identity.py
tests/semantic/: conftest.py  test_completeness.py  test_detector_canaries.py  test_disambiguation.py  test_faithfulness.py  test_injection_compliance_semantic.py  test_pii_leakage_semantic.py  test_refusal.py  test_relevancy.py  test_tool_use.py
tests/unit/: test_adversarial_probes.py  test_agent_accessors.py  test_agent_failure_modes.py  test_agent_member_lookup.py  test_agent_prompt_template.py  test_agent_tool_integrity.py  test_calibration.py  test_cassettes.py  test_check_module_coverage.py  test_check_vuln_exceptions.py  test_checks.py  test_chitra_fixture_failures.py  test_citations.py  test_config.py  test_conversation.py  test_cost.py  test_coverage_calculator.py  test_coverage_calculator_properties.py  test_dataset_inventory.py  test_dataset_matrix.py  test_defects_report.py  test_detect_flaky_tests.py  test_doc_consistency.py  test_framework_contract_minimal_target.py  test_golden.py  test_guardrails.py  test_judges.py  test_latency.py  test_member_auth.py  test_metrics.py  test_model_comparison.py  test_model_selector.py  test_orchestration_contracts.py  test_promptfoo_provider.py  test_providers.py  test_report_site.py  test_reporting.py  test_retrieval_ablation.py  test_retrieval_eval.py  test_retriever.py  (+7 more)
(+81 files in other folders)
