[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verity-policy-coverage-eval-framework"
version = "0.1.0"
description = "A production-grade evaluation framework for LLM applications — demonstrated on a policy coverage RAG + tool-use assistant."
license = { text = "MIT" }
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "litellm>=1.45.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/verity", "src/sut"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.12",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "N", "RUF"]
ignore = [
    "ANN401",  # Any allowed for litellm/chromadb boundaries
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # no return-type annotations required in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "litellm.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live: marks tests that make real LLM API calls (deselect with -m 'not live')",
    "deterministic: marks Tier-1 deterministic tests (no live calls)",
    "semantic: marks Tier-2 semantic eval tests (requires live LLM)",
    "adversarial: marks Tier-3 adversarial/red-team tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
