[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verity-policy-coverage-eval-framework"
version = "0.1.0"
description = "A structured, multi-tier evaluation framework for LLM applications — demonstrated on a policy coverage RAG + tool-use assistant."
license = { text = "MIT" }
authors = [{ name = "prayagv" }]
requires-python = ">=3.12"
readme = "README.md"
keywords = ["evaluation", "rag", "testing", "quality", "policy", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.45.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.12",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "hypothesis>=6.100.0",
]
semantic = [
    "deepeval>=4.1.0",
    "ragas>=0.2.0",
]
otel = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]
report = [
    "allure-pytest>=2.13.0",
    "markdown>=3.6",
]
mutation = [
    "mutmut>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/qa-test-automation-frameworks/verity-policy-coverage-eval-framework"
Repository = "https://github.com/qa-test-automation-frameworks/verity-policy-coverage-eval-framework"
Issues = "https://github.com/qa-test-automation-frameworks/verity-policy-coverage-eval-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/verity", "src/sut"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "N", "RUF"]
ignore = [
    "ANN401",  # Any allowed for litellm/chromadb boundaries
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # no return-type annotations required in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "litellm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["deepeval.*", "ragas.*", "langchain.*", "langchain_core.*", "datasets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markdown.*", "allure.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live: marks tests that make real LLM API calls (deselect with -m 'not live')",
    "deterministic: marks Tier-1 deterministic tests (no live calls)",
    "semantic: marks Tier-2 semantic eval tests (requires live LLM)",
    "adversarial: marks Tier-3 adversarial/red-team tests",
    "flaky: marks live tests with known provider instability and documented retry policy (reserved: apply once a specific test has an observed instability history to document)",
    "quarantine: marks live tests that collect signal but should not block merges",
    "needs_onnx_download: marks tests requiring real Chroma+ONNX embedding download (network on first run, not truly hermetic; deselect with -m 'not needs_onnx_download')",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 80

[tool.bandit]
skips = ["B101"]  # assert is intentional in framework internal guards

# ---------------------------------------------------------------------------
# mutmut (mutation testing) — scoped to deterministic framework and demo-target
# modules: src/sut/tools/coverage_calculator.py and src/verity/checks.py. They
# are pure, have no I/O, and carry the arithmetic plus core check semantics
# where mutation score is most meaningful and cheapest to check. Run with:
# uv run --extra mutation mutmut run && uv run --extra mutation mutmut results
# ---------------------------------------------------------------------------
[tool.mutmut]
source_paths = ["src"]
only_mutate = ["src/sut/tools/coverage_calculator.py", "src/verity/checks.py"]
pytest_add_cli_args_test_selection = ["tests/unit/test_coverage_calculator.py", "tests/unit/test_checks.py"]
runner = "python -m pytest -x -q"
